[gd_scene load_steps=4 format=3 uid="uid://bucq7ncy883xp"]

[ext_resource type="Script" path="res://scripts/HUDButton.gd" id="1_7cu43"]
[ext_resource type="Texture2D" uid="uid://bnoey0jajceax" path="res://assets/textures/button2.png" id="2_aw2iv"]

[sub_resource type="CircleShape2D" id="CircleShape2D_ua1t6"]
radius = 45.0

[node name="HUDButton" type="Control"]
custom_minimum_size = Vector2(200, 200)
layout_mode = 3
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -200.0
offset_bottom = 200.0
grow_horizontal = 0
mouse_filter = 1
script = ExtResource("1_7cu43")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(100, 100)
scale = Vector2(0.4, 0.4)
texture = ExtResource("2_aw2iv")

[node name="Quadrant1" type="Area2D" parent="."]
position = Vector2(60, 60)

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Quadrant1"]
position = Vector2(0, -3.8147e-06)
polygon = PackedVector2Array(37, -60, 37, -10, 30, -9, 20, -6, 12, -2, 5, 4, -2, 13, -8, 23, -10, 36, -60, 37, -59, 23, -56, 10, -52, -3, -46, -14, -38, -25, -27, -36, -14, -46, 0, -53, 16, -58)

[node name="Quadrant2" type="Area2D" parent="."]
position = Vector2(60, 60)

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Quadrant2"]
polygon = PackedVector2Array(43, -11, 49, -10, 57, -8, 65, -4, 71, -3.8147e-06, 78, 7, 84, 15, 87, 23, 90, 30, 91, 37, 140, 37, 140, 31, 138, 20, 135, 7, 130, -5, 124, -17, 115, -28, 105, -38, 92, -47, 79, -53, 64, -58, 43, -60)

[node name="Quadrant3" type="Area2D" parent="."]
position = Vector2(60, 60)

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Quadrant3"]
polygon = PackedVector2Array(-11, 43, -60, 43, -59, 53, -57, 66, -53, 80, -46, 93, -37, 106, -21, 121, -5, 130, 10, 136, 23, 139, 37, 140, 37, 90, 30, 90, 20, 86, 10, 80, 2, 73, -4, 65, -8, 55)

[node name="Quadrant4" type="Area2D" parent="."]
position = Vector2(60, 60)

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Quadrant4"]
polygon = PackedVector2Array(43, 140, 57, 139, 71, 136, 87, 130, 100, 122, 113, 110, 121, 100, 130, 86, 137, 68, 140, 49, 140, 43, 90, 43, 90, 49, 87, 58, 81, 69, 74, 77, 63, 85, 54, 88, 43, 90)

[node name="CenterButton" type="Area2D" parent="."]
position = Vector2(60, 60)

[node name="CollisionShape2D" type="CollisionShape2D" parent="CenterButton"]
position = Vector2(40, 40)
shape = SubResource("CircleShape2D_ua1t6")
